# SATree

./: README.md
SANet/cfgs/forinstance/: default.yaml  pointmetabase-l.yaml
SANet/cfgs/treeml/: default.yaml  pointmetabase-l.yaml
SANet/openpoints/dataset/: __init__.py
SANet/openpoints/dataset/forinstance/: __init__.py  forinstance.py  prepare_forinstance.py
SANet/openpoints/dataset/treeml/: prepare_data_treeml.py  prepare_treeml_strongstem.py  treeml.py
SASeg/Code/: CMakeLists.txt
SASeg/Code/SASeg/: common.h  main.cpp  tree_seg.cpp  tree_seg.h
SASeg/Config/: forinstance.ini  hyperparams suggestion.txt  treeml.ini
StructureNet/cfgs/: default.yaml
StructureNet/cfgs/forinstance/: default.yaml
StructureNet/cfgs/treeml/: default.yaml
StructureNet/examples/segmentation/: main.py
StructureNet/openpoints/dataset/treeml/: __init__.py  prepare_treeml_strongstem.py
StructureNet/openpoints/models/segmentation/: base_seg.py
StructureNet/openpoints/transforms/: point_transformer_gpu.py
StructureSeg/: CMakeLists.txt
StructureSeg/Code/: CMakeLists.txt
StructureSeg/Code/StructureSeg/: common.h  main.cpp  tree_seg.cpp  tree_seg.h
StructureSeg/Config/: forinstance.ini  hyperparams suggestion.txt  treeml.ini
Tools/: SAEval.py
